# TableauToFabric

./: .coveragerc  .env.example  .fabric_cache  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  config.example.json  generate_report.py  migrate.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg
.github/: agent-instructions.md  copilot-instructions.md
.github/scripts/: build_docs.py
.github/workflows/: ci-tests.yml  ci.yml  gh-pages.yml  pr-diff.yml  publish.yml
artifacts/confidence_test/: confidence_report.json
artifacts/conversion_logs/: conversion_report_20260306_152539.json  conversion_report_20260306_154845.json  conversion_report_20260306_154944.json  conversion_report_20260306_155001.json  conversion_report_20260306_155017.json  conversion_report_20260306_155018.json  conversion_report_20260306_155033.json  conversion_report_20260306_164330.json  conversion_report_20260306_164347.json  conversion_report_20260306_164359.json  conversion_report_20260306_164413.json  conversion_report_20260306_175015.json  conversion_report_20260306_175029.json  conversion_report_20260306_175041.json  conversion_report_20260306_175053.json  conversion_report_20260306_180311.json  conversion_report_20260306_180312.json  conversion_report_20260306_185143.json  conversion_report_20260306_185206.json  conversion_report_20260306_185221.json  conversion_report_20260306_185233.json  conversion_report_20260306_185244.json  conversion_report_20260306_185934.json
artifacts/deploy_global_superstore/: migration_metadata.json
artifacts/deploy_nba/: migration_metadata.json
artifacts/deploy_test/: migration_metadata.json
artifacts/migration_reports/: assessment_Cache_2026-03-05.json  assessment_TABLEAU_10_TWBX_2026-03-05.json  assessment_TABLEAU_10_TWB_2026-03-05.json  assessment_complex_report_2026-03-05.json  (+11 more)
conversion/: __init__.py  calculation_converter.py  convert_all_tableau_objects.py  dashboard_converter.py  datasource_converter.py  filter_converter.py  parameter_converter.py  story_converter.py  worksheet_converter.py
docs/: ARCHITECTURE.md  CALCULATED_COLUMNS_GUIDE.md  COMPREHENSIVE_AUDIT_REPORT.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  FABRIC_PROJECT_GUIDE.md  FAQ.md  FEATURE_GAP_ANALYSIS.md  GAP_ANALYSIS.md  KNOWN_LIMITATIONS.md  MAPPING_REFERENCE.md  MIGRATION_CHECKLIST.md  POWERBI_PROJECT_GUIDE.md  README.md  TABLEAU_PREP_TO_POWERQUERY_REFERENCE.md  TABLEAU_TO_DAX_REFERENCE.md  TABLEAU_TO_POWERQUERY_REFERENCE.md  TABLEAU_VERSION_COMPATIBILITY.md  generate_api_docs.py
fabric_import/: README.md  __init__.py  assessment.py  auth.py  calc_column_utils.py  client.py  comparison_report.py  constants.py  dataflow_generator.py  deployer.py  gateway_config.py  goals_generator.py  import_to_fabric.py  incremental.py  lakehouse_generator.py  m_query_generator.py  migration_report.py  naming.py  notebook_generator.py  pbip_generator.py  pipeline_generator.py  plugins.py  progress.py  semantic_model_generator.py  strategy_advisor.py  telemetry.py  telemetry_dashboard.py  tmdl_generator.py  utils.py  validator.py  visual_generator.py  wizard.py
scripts/: Deploy-TableauMigration.ps1  Deploy-TableauMigration_TaskFlow.json  New-MigrationWorkspace.ps1  New-MigrationWorkspace_TaskFlow.json  TableauToFabric.psm1  Validate-Deployment.ps1  Validate-Deployment_TaskFlow.json  run_confidence_report.py  version_bump.py
tableau_export/: README.md  __init__.py  datasource_extractor.py  dax_converter.py  extract_tableau_data.py  hyper_reader.py  m_query_builder.py  prep_flow_parser.py  pulse_extractor.py  server_client.py
tests/: README.md  __init__.py  conftest.py  factories.py  test_alignment_features.py  test_assessment.py  test_auth.py  test_backlog.py  test_calc_column_utils.py  test_cli_wiring.py  test_client.py  test_comparison_report.py  test_config.py  test_conversion_modules.py  test_convert_all.py  test_coverage_sprint26.py  test_cross_workload.py  test_dashboard_converter_coverage.py  test_dataflow_generator.py  test_datasource_extractor.py  test_datasource_extractor_coverage.py  test_dax_converter.py  test_dax_converter_coverage.py  test_dax_converter_coverage_push.py  test_dax_coverage.py  test_deployer.py  test_end_to_end.py  test_enterprise_features.py  test_error_paths.py  test_extract_coverage.py  test_extract_tableau_data.py  test_extract_tableau_data_coverage.py  test_extraction.py  test_fabric_integration.py  test_feature_completeness.py  test_feature_gaps.py  test_filter_converter_coverage.py  test_gap_implementations.py  test_generation_coverage.py  test_goals_generator.py  (+56 more)
(+531 files in other folders)
