[project]
name = "tableautofabric"
version = "3.5.0"
description = "Automated migration tool for Tableau workbooks to Microsoft Fabric artifacts"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Pierre DOUDET", email = "pidoudet@microsoft.com" },
]
keywords = ["tableau", "fabric", "migration", "power-bi", "dax", "tmdl"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "python-dateutil>=2.8",
]

[project.optional-dependencies]
deploy = [
    "azure-identity>=1.12",
    "requests>=2.28",
]
config = [
    "pydantic-settings>=2.0",
]
tableau-api = [
    "tableauserverclient>=0.25",
]
dev = [
    "pytest>=7.0",
]
all = [
    "azure-identity>=1.12",
    "requests>=2.28",
    "pydantic-settings>=2.0",
    "tableauserverclient>=0.25",
    "pytest>=7.0",
]

[project.scripts]
tableautofabric = "migrate:main"

[project.urls]
Repository = "https://github.com/cyphou/TableauToFabric"
Documentation = "https://github.com/cyphou/TableauToFabric/tree/main/docs"

# ── Tool configuration ──

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short"

[tool.pyright]
pythonVersion = "3.8"
include = ["tableau_export", "fabric_import", "conversion", "migrate.py"]
exclude = ["__pycache__", "artifacts", "output"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"
