[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tableau-to-fabric"
version = "12.0.0"
description = "Automated migration of Tableau workbooks to Power BI .pbip projects (PBIR v4.0 + TMDL)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Tableau to Fabric Migration Team"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Database :: Front-Ends",
]
keywords = ["tableau", "fabric", "powerbi", "migration", "pbip", "tmdl", "pbir", "dax"]

# No external dependencies — stdlib only
dependencies = []

[project.optional-dependencies]
deploy = [
    "azure-identity>=1.15.0",
    "requests>=2.31.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "coverage>=7.0",
]
all = [
    "tableau-to-fabric[deploy,dev]",
]

[project.urls]
Homepage = "https://github.com/tableau-to-fabric/tableau-to-fabric"
Documentation = "https://tableau-to-fabric.github.io/"
Repository = "https://github.com/tableau-to-fabric/tableau-to-fabric"
Changelog = "https://github.com/tableau-to-fabric/tableau-to-fabric/blob/main/CHANGELOG.md"

[project.scripts]
tableau-to-fabric = "migrate:main"

[tool.setuptools.packages.find]
include = ["tableau_export*", "fabric_import*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["tableau_export", "fabric_import"]
omit = [
    "tests/*",
    "*/__pycache__/*",
    "fabric_import/deploy/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "raise NotImplementedError",
    "pass",
]

[tool.pyright]
include = ["tableau_export", "fabric_import", "migrate.py"]
pythonVersion = "3.8"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
